--- a/index.html
+++ b/index.html
@@ -16,9 +16,28 @@
     <meta charset="UTF-8">
 
     <title>KodMan</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/camera.css">
 
-    <link rel="stylesheet" href="./style.css">
+    <script type='text/javascript' src='./scripts/jquery.min.js'></script>
+    <script type='text/javascript' src='./scripts/jquery.mobile.customized.min.js'></script>
+    <script type='text/javascript' src='./scripts/jquery.easing.1.3.js'></script>
+    <script type='text/javascript' src='./scripts/camera.min.js'></script>
+
+    <script>
+        $(function () {
+
+            $('#camera_wrap_1').camera({
+                thumbnails: false,
+                pagination: false,
+                loader: 'bar',
+                minHeight: '500px'
+            });
+
+        });
+    </script>
+
 </head>
 
 <body style="display: block;"><button type="button" id="mobile-nav-toggle"><i class="lnr lnr-menu"></i></button>
@@ -61,18 +80,43 @@
     </header>
 
     <section class="banner-area" id="home">
-        <div class="container">
-            <div class="row fullscreen d-flex align-items-center justify-content-start" style="height: 671px;">
-                <div class="banner-content col-lg-7">
-
-                    <h1>
-                        The first choice for <br>
-                         Coffee and Spices
-                    </h1>
-
+        <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
+            <div data-src="./images/slides/south-indian-filter-coffee.jpg">
+                <div class="camera_caption fadeFromBottom">
+                    south indian filter coffee
                 </div>
             </div>
-        </div>
+            <div data-src="./images/slides/spices.jpg">
+                <div class="camera_caption fadeFromBottom">
+                    spices
+                </div>
+            </div>
+            <div data-src="./images/slides/Coffee_Feature_Image.jpeg">
+                <div class="camera_caption fadeFromBottom">
+                    Coffee 
+                </div>
+            </div>
+            <div data-src="./images/slides/Black-Pepper-Vs.-White-Pepper.jpeg">
+                <div class="camera_caption fadeFromBottom">
+                    Black-Pepper & White-Pepper
+                </div>
+            </div>
+            <div data-src="./images/slides/tree.jpg">
+                <div class="camera_caption fadeFromBottom">
+                    Coffe and Pepper plantation
+                </div>
+            </div>
+            <div data-src="./images/slides/coffee-beans.jpg">
+                <div class="camera_caption fadeFromBottom">
+                    coffee beans
+                </div>
+            </div>
+            <div data-src="./images/slides/pepper-plant.jpeg">
+                <div class="camera_caption fadeFromBottom">
+                  Pepper-plant
+                </div>
+            </div>
+        </div><!-- #camera_wrap_1 -->
     </section>
 
 
@@ -198,12 +242,12 @@
                 <div class="col-lg-4">
                     <div class="single-menu">
                         <div class="title-div justify-content-between d-flex">
-                            <h4>Gold Pepper</h4>
+                            <h4>Pepper Gold</h4>
 
                         </div>
                         <p>
                             Black Gold or Kali Mirchi, also known as the King of spices, is one of the most widely used
-                            spices in the world. 
+                            spices in the world.
                         </p>
                     </div>
                 </div>
@@ -211,12 +255,12 @@
                 <div class="col-lg-4">
                     <div class="single-menu">
                         <div class="title-div justify-content-between d-flex">
-                            <h4>Glod Plus Pepper</h4>
+                            <h4>Pepper Glod Plus</h4>
 
                         </div>
                         <p>
                             Black Gold or Kali Mirchi, also known as the King of spices, is one of the most widely used
-                            spices in the world. 
+                            spices in the world.
                         </p>
                     </div>
                 </div>
@@ -229,7 +273,7 @@
                         </div>
                         <p>
                             White pepper is often used in dishes that need a peppery bite but where you don't want black
-                            flecks, such as in white sauces and potato dishes. 
+                            flecks, such as in white sauces and potato dishes.
                         </p>
                     </div>
                 </div>
@@ -315,11 +359,12 @@
                                     </div>
                                     <div class="col-lg-6 col-md-6 single-blog">
                                         <div>Estate OFFICE</div>
-                                        <div>Address: #72, 7th Cross, NS Paradise, avalahalli, <br />
-                                            Virgo nagar post, Bangalore - 560049</div>
+                                        <div>Address: Malligekhan Estate, K Thalaguru, Gabgal post,<br/>
+                                            Mudigere Tq, Chikkamagalore Dist
+                                        </div>
                                         <div>Email: <a href="mailto:Customercare@kodman.in">Customercare@kodman.in</a>
                                         </div>
-                                        <div>Conatact: <a href="tel:+918660477516">+91 86604 77516</a></div>
+                                        <div>Conatact: <a href="tel:+919741411229">+91 97414 11229</a></div>
                                     </div>
                                 </div>
                             </div>
