Typo issues fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="row justify-content-end">
                     <div class="col-lg-8 col-sm-4 col-8 header-top-right no-padding">
                         <ul>
-                            <li>Conatact:
+                            <li>Contact:
                                 <a href="tel:+918660477516">+91 86604 77516 </a>
                             </li>
                         </ul>
@@ -254,7 +254,7 @@
                 <div class="col-lg-4">
                     <div class="single-menu">
                         <div class="title-div justify-content-between d-flex">
-                            <h4>Pepper Glod Plus</h4>
+                            <h4>Pepper Gold Plus</h4>
 
                         </div>
                         <p>
