used Categories instead of brands

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
                         <li class="menu-active"><a href="#home">Home</a></li>
                         <li><a href="#products">Products</a></li>
-                        <li><a href="#brands">Brands</a></li>
+                        <li><a href="#brands">Categories</a></li>
                         <li><a href="#about-us">About us</a></li>
                         <li><a href="#contact-us">Contact us</a></li>
                         <!-- <li class="menu-has-children"><a href="" class="sf-with-ul">Pages</a>
@@ -172,7 +172,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="menu-content pb-60 col-lg-10">
                     <div class="title text-center">
-                        <h1 class="mb-10">Brands we serve for you</h1>
+                        <h1 class="mb-10">Categories we serve for you</h1>
                         <p>Who are in extremely love with eco friendly system.</p>
                     </div>
                 </div>
@@ -229,11 +229,11 @@
                 <div class="col-lg-4">
                     <div class="single-menu">
                         <div class="title-div justify-content-between d-flex">
-                            <h4>South Blend Filter Coffee</h4>
+                            <h4>Instant Coffee</h4>
 
                         </div>
                         <p>
-                            A Blend of Arabica and Robusta coffee beans for the traditional South Indian Filter Coffee.
+                            100% pure coffee prepared from the finest Arabica and Robusta beans, roasted and ground to perfection.
                         </p>
                     </div>
                 </div>
@@ -437,7 +437,7 @@
 
             <li class="menu-active"><a href="#home">Home</a></li>
             <li><a href="#products">Products</a></li>
-            <li><a href="#brands">Brands</a></li>
+            <li><a href="#brands">Categories</a></li>
             <li><a href="#about-us">About us</a></li>
             <li><a href="#contact-us">Contact us</a></li>
             <!-- <li class="menu-has-children"><i class="lnr lnr-chevron-down"></i><a href="" class="sf-with-ul">Pages</a>
