Typo issues fixed

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 <div class="row">
                                     <p>
 
-                                        Kodman enterprise was established in the year 2021 with the objective of
+                                        KodMan enterprise was established in the year 2021 with the objective of
                                         bringing
                                         the
                                         best
