Added Product images

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type='text/javascript' src='./scripts/camera.min.js'></script>
     <script type='text/javascript' src='./scripts/main.js'></script>
     <script type='text/javascript' src='./scripts/superfish.min.js'></script>
+    <script type='text/javascript' src='./scripts/jquery.elevatezoom.js'></script>
 
     <script>
         $(function () {
@@ -36,6 +37,8 @@
                 loader: 'bar',
                 minHeight: '500px'
             });
+
+            $(".zoom-img").elevateZoom({ easing: true });
 
         });
     </script>
@@ -178,102 +181,168 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Indian Filter Coffee</h4>
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Indian Filter Coffee</h4>
 
+                                </div>
+                                <p>
+                                    Indian filter coffee is a coffee drink made by mixing frothed and boiled milk with
+                                    the
+                                    infusion obtained by percolation brewing of finely ground coffee powder in a
+                                    traditional
+                                    Indian filter.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/coffee-1.jpeg" />
+                            </div>
                         </div>
-                        <p>
-                            Indian filter coffee is a coffee drink made by mixing frothed and boiled milk with the
-                            infusion obtained by percolation brewing of finely ground coffee powder in a traditional
-                            Indian filter.
-                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Organic Filter Coffee</h4>
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Organic Filter Coffee</h4>
 
+                                </div>
+                                <p>
+                                    Organic filter coffee is coffee produced without the aid of artificial chemical
+                                    substances,
+                                    such as certain additives or some pesticides and herbicides.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/coffee-2.jpeg" />
+                            </div>
                         </div>
-                        <p>
-                            Organic filter coffee is coffee produced without the aid of artificial chemical substances,
-                            such as certain additives or some pesticides and herbicides.
-                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Arabica filter coffee</h4>
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Arabica filter coffee</h4>
 
+                                </div>
+                                <p>
+                                    Arabica coffee is one of the ancient coffee. Which is light in the taste and
+                                    less bitter.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/coffee-3.jpeg" />
+                            </div>
                         </div>
-                        <p>
-                            Arabica coffee is one of the ancient coffee. Which is light in the taste and less bitter.
-                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Robusta Filter Coffee</h4>
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Robusta Filter Coffee</h4>
 
+                                </div>
+                                <p>
+                                    Robusta coffee is a type of coffee made from the beans (seeds) of the Coffea
+                                    canephora
+                                    plant. Which is mild in taste.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/coffee-1.jpeg" />
+                            </div>
                         </div>
-                        <p>
-                            Robusta coffee is a type of coffee made from the beans (seeds) of the Coffea canephora
-                            plant. Which is mild in taste.
-                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Instant Coffee</h4>
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Instant Coffee</h4>
 
+                                </div>
+                                <p>
+                                    100% pure coffee prepared from the finest Arabica and Robusta beans,
+                                    roasted and ground to
+                                    perfection.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/coffee-2.jpeg" />
+                            </div>
                         </div>
-                        <p>
-                            100% pure coffee prepared from the finest Arabica and Robusta beans, roasted and ground to perfection.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Pepper Gold</h4>
-
-                        </div>
-                        <p>
-                            Black Gold or Kali Mirchi, also known as the King of spices, is one of the most widely used
-                            spices in the world.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>Pepper Gold Plus</h4>
-
-                        </div>
-                        <p>
-                            Black Gold or Kali Mirchi, also known as the King of spices, is one of the most widely used
-                            spices in the world.
-                        </p>
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="single-menu">
-                        <div class="title-div justify-content-between d-flex">
-                            <h4>White Pepper</h4>
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Pepper Gold</h4>
 
+                                </div>
+                                <p>
+                                    Black Gold or Kali Mirchi, also known as the King of spices, is one
+                                    of the most widely used
+                                    spices in the world.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/pepper-1.jpeg" />
+                            </div>
                         </div>
-                        <p>
-                            White pepper is often used in dishes that need a peppery bite but where you don't want black
-                            flecks, such as in white sauces and potato dishes.
-                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="single-menu">
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>Pepper Gold Plus</h4>
+
+                                </div>
+                                <p>
+                                    Black Gold or Kali Mirchi, also known as the King of spices, is
+                                    one of the most widely used
+                                    spices in the world.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/pepper-2.jpeg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="single-menu">
+                        <div class="product-container">
+                            <div class="left">
+                                <div class="title-div justify-content-between d-flex">
+                                    <h4>White Pepper</h4>
+
+                                </div>
+                                <p>
+                                    White pepper is often used in dishes that need a peppery
+                                    bite but where you don't want black
+                                    flecks, such as in white sauces and potato dishes.
+                                </p>
+                            </div>
+                            <div class="right">
+                                <img class="zoom-img" src="./images/Product/pepper-3.jpeg" />
+                            </div>
+                        </div>
                     </div>
                 </div>
 
