--- a/index.html
+++ b/index.html
@@ -109,21 +109,6 @@
                     Black-Pepper & White-Pepper
                 </div>
             </div>
-            <div data-src="./images/slides/tree.jpg">
-                <div class="camera_caption fadeFromBottom">
-                    Coffe and Pepper plantation
-                </div>
-            </div>
-            <div data-src="./images/slides/coffee-beans.jpg">
-                <div class="camera_caption fadeFromBottom">
-                    coffee beans
-                </div>
-            </div>
-            <div data-src="./images/slides/pepper-plant.jpeg">
-                <div class="camera_caption fadeFromBottom">
-                    Pepper-plant
-                </div>
-            </div>
         </div><!-- #camera_wrap_1 -->
     </section>
 
@@ -198,7 +183,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/coffee-1.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/coffee-2.jpg" />
                             </div>
                         </div>
                     </div>
@@ -218,7 +203,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/coffee-2.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/coffee-4.jpg" />
                             </div>
                         </div>
                     </div>
@@ -237,7 +222,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/coffee-3.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/coffee-1.jpg" />
                             </div>
                         </div>
                     </div>
@@ -257,7 +242,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/coffee-1.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/coffee-3.jpg" />
                             </div>
                         </div>
                     </div>
@@ -298,7 +283,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/pepper-1.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/pepper-1.jpg" />
                             </div>
                         </div>
                     </div>
@@ -319,7 +304,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/pepper-2.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/pepper-2.jpg" />
                             </div>
                         </div>
                     </div>
@@ -340,7 +325,7 @@
                                 </p>
                             </div>
                             <div class="right">
-                                <img class="zoom-img" src="./images/Product/pepper-3.jpeg" />
+                                <img class="zoom-img" src="./images/Product/latest/pepper-3.jpg" />
                             </div>
                         </div>
                     </div>
@@ -375,26 +360,23 @@
                                         consistent effort towards upholding the highest standards in the industry.
                                     </p>
                                     <p>
+                                        KodMan Coffee is chikkamagalore's finest quality coffee providers. we provide
+                                        single source coffee (From Farm to direct customer) and we handpicks the best
+                                        Arabica and Robusta beans which are roasted to perfection for your best cup of
+                                        coffee.
+                                    </p>
+                                    <p>
+                                        Our farm located in the village called kadumane from chikkamagaluru district in
+                                        karnataka and we produce coffee beans from our own land and processing the same
+                                        before we roasted to perfection and also we roast the beans with low temperature
+                                        to get the best quality coffee.
+                                    </p>
+                                    <p>
                                         Each and every day at KodMan Enterprises, we set out to make the best tasting
-                                        coffee
-                                        possible as we believe great coffee should be experienced not rushed.
-
-                                        Our company was founded based on our passion to deliver you fresh coffee that
-                                        taste
-                                        the
-                                        way
-                                        coffee was meant to taste. In some small way, we hope to impact this world
-                                        through
-                                        great
-                                        tasting coffee shared in community with others.
-
-                                        Coffee and Spices comes from one of the most fascinating place in South India -
-                                        chikmagalur
-                                        in karnataka
-
-                                        We want to make such great tasting coffee available to you with an emphasis on
-                                        quality,
-                                        freshness, customer service and convenience.
+                                        coffee possible as we believe great coffee should be experienced not rushed. Our
+                                        company was founded based on our passion to deliver you fresh coffee that taste
+                                        the way coffee was meant to taste. In some small way, we hope to impact this
+                                        world through great tasting coffee shared in community with others.
                                     </p>
                                 </div>
                             </div>
@@ -419,11 +401,11 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 single-blog">
                                         <div>CORPORATE OFFICE</div>
-                                        <div>Address: #72, 7th Cross, NS Paradise, avalahalli,<br />
+                                        <div>Address: #72, 7th Cross, NS Paradise, Avalahalli,<br />
                                             Virgo nagar post, Bangalore - 560049</div>
                                         <div>Email: <a href="mailto:Customercare@kodman.in">Customercare@kodman.in</a>
                                         </div>
-                                        <div>Conatact: <a href="tel:+918660477516">+91 86604 77516</a></div>
+                                        <div>Contact: <a href="tel:+918660477516">+91 86604 77516</a></div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 single-blog">
                                         <div>Estate OFFICE</div>
@@ -432,7 +414,7 @@
                                         </div>
                                         <div>Email: <a href="mailto:Customercare@kodman.in">Customercare@kodman.in</a>
                                         </div>
-                                        <div>Conatact: <a href="tel:+919741411229">+91 97414 11229</a></div>
+                                        <div>Contact: <a href="tel:+919741411229">+91 97414 11229</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -447,7 +429,7 @@
 
 
 
-    <footer class="footer-area section-gap">
+    <footer class="footer-area">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-6 col-sm-6">
@@ -456,32 +438,13 @@
                         <p class="footer-text">
 
                             Copyright ©
-                            <script>document.write(new Date().getFullYear());</script>2021 All rights reserved
+                            <script>document.write(new Date().getFullYear());</script> - 2021 All rights reserved
 
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-5  col-md-6 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h6>Newsletter</h6>
-                        <p>Stay update with our latest</p>
-                        <div class="" id="mc_embed_signup">
-                            <form target="_blank" novalidate="true"
-                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                class="form-inline">
-                                <input class="form-control" name="EMAIL" placeholder="Enter Email"
-                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-                                    required="" type="email">
-                                <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
-                                        aria-hidden="true"></i></button>
-                                <div style="position: absolute; left: -5000px;">
-                                    <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
-                                        type="text">
-                                </div>
-                                <div class="info pt-20"></div>
-                            </form>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 social-widget">
                     <div class="single-footer-widget">
@@ -490,8 +453,8 @@
                         <div class="footer-social d-flex align-items-center">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+                            <a href="#"><i class="fa fa-youtube"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
