--- a/index.html
+++ b/index.html
@@ -400,21 +400,35 @@
 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 single-blog">
-                                        <div>CORPORATE OFFICE</div>
+                                        <h6>CORPORATE OFFICE</h6>
                                         <div>Address: #72, 7th Cross, NS Paradise, Avalahalli,<br />
                                             Virgo nagar post, Bangalore - 560049</div>
                                         <div>Email: <a href="mailto:Customercare@kodman.in">Customercare@kodman.in</a>
                                         </div>
                                         <div>Contact: <a href="tel:+918660477516">+91 86604 77516</a></div>
+
+                                        <div style="padding: 10px 0 0;">
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.02253974219!2d77.72824311534222!3d13.034236590814759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae112152d54de3%3A0x8d06c8377386e307!2sKodman%20Enterprises!5e0!3m2!1sen!2sin!4v1648379806986!5m2!1sen!2sin"
+                                                width="100%" height="450" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 single-blog">
-                                        <div>Estate OFFICE</div>
+                                        <h6>Estate OFFICE</h6>
                                         <div>Address: Malligekhan Estate, K Thalaguru, Gabgal post,<br />
                                             Mudigere Tq, Chikkamagalore Dist
                                         </div>
                                         <div>Email: <a href="mailto:Customercare@kodman.in">Customercare@kodman.in</a>
                                         </div>
                                         <div>Contact: <a href="tel:+919741411229">+91 97414 11229</a></div>
+
+                                        <div style="padding: 10px 0 0;">
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5492.81559344273!2d75.5101315708869!3d13.224867320992926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbb31f136185177%3A0x8a0a4754e040ca9!2sKadumane%20Chamundeeswari%20Temple!5e0!3m2!1sen!2sin!4v1648380637760!5m2!1sen!2sin"
+                                                width="100%" height="450" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -444,17 +458,20 @@
                     </div>
                 </div>
                 <div class="col-lg-5  col-md-6 col-sm-6">
-                    
+
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 social-widget">
                     <div class="single-footer-widget">
                         <h6>Follow Us</h6>
                         <p>Let us be social</p>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="https://www.facebook.com/KodMancoffee" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/KodMancoffee" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
                             <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                            <a href="https://www.youtube.com/channel/UC17Ke7HPGveBbGhGXsmWe0g" target="_blank"><i class="fa fa-youtube"></i></a>
-                            <a href="https://www.instagram.com/kodmancoffee/" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UC17Ke7HPGveBbGhGXsmWe0g" target="_blank"><i
+                                    class="fa fa-youtube"></i></a>
+                            <a href="https://www.instagram.com/kodmancoffee/" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
